--- a/templates/analytics.html
+++ b/templates/analytics.html
@@ -67,7 +67,9 @@
                             Reliability: <span id="metric_reliability" class="text-gold">Calculating...</span><br>
                             Avg Error (MAE): <span id="metric_mae">--</span><br>
                             <span style="font-size: 0.8rem; opacity: 0.7;">Samples: <span
-                                    id="metric_coverage">--</span></span>
+                                    id="metric_coverage">--</span></span><br>
+                            <span style="font-size: 0.7rem; color: #888;">Updated: <span
+                                    id="metric_timestamp">--</span></span>
                         </div>
                     </div>
                 </div>
